Перенес документацию сваггера в отдельный файл
