# storage/api-docs/api-docs.json
@@ -7,22 +7,66 @@
     },
     "paths": {
         "/api/users": {
-            "get": {
+            "post": {
                 "tags": [
                     "Users"
                 ],
                 "summary": "Get list of users",
-                "description": "Returns list of users",
-                "operationId": "getUsersList",
+                "description": "Добавления пользователя в бд",
+                "operationId": "createUser",
+                "parameters": [
+                    {
+                        "name": "login",
+                        "in": "query",
+                        "description": "Логин пользователя",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "description": "Пароль",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "password"
+                        }
+                    },
+                    {
+                        "name": "password_repeat",
+                        "in": "query",
+                        "description": "Пароль повторение",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "password"
+                        }
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "email пользователя",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "email"
+                        }
+                    }
+                ],
                 "responses": {
+                    "500": {
+                        "description": "Ошибка"
+                    },
+                    "400": {
+                        "description": "Ошибка валидации"
+                    },
+                    "302": {
+                        "description": "Пользователь уже существует"
+                    },
                     "200": {
-                        "description": "Successful operation"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
+                        "description": "Успешный пароль"
                     }
                 }
             }
